Deployment/server/kubernetes/eks/ingress/ingress-landing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: landing-page
  annotations:
    kubernetes.io/ingress.class: "nginx"

spec:
  rules:
  - host: thinkmay.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landing-page
            port:
              number: 80
